refact : 상품 검색 리팩토링